--- a/src/Container/SignUpPage.css
+++ b/src/Container/SignUpPage.css
@@ -7,7 +7,7 @@
 
 .paper .avatar {
     color: "#FFFFFF";
-    background-color: #e74c3c;
+    background-color: #0652DD;
     height: 100px;
     width: 100px;
 }
